:sparkles: Adiciona formulário de relatório de abastecimentos ao projeto Delphi
Incluído uView.Rel.Abastecimentos.pas no .dproj com referência ao form frmRelAbastecimentos

Define FormType como dfm para permitir compilação e inclusão visual do form

Prepara o projeto para gerar relatórios de abastecimentos a partir do menu principal

--- a/src/FortesAbastecimento.dproj
+++ b/src/FortesAbastecimento.dproj
@@ -174,6 +174,10 @@
         <DCCReference Include="controller\uController.RootBomba.pas"/>
         <DCCReference Include="model\services\uModel.Service.Bomba.pas"/>
         <DCCReference Include="controller\uController.DataConverter.Bomba.pas"/>
+        <DCCReference Include="view\uView.Rel.Abastecimentos.pas">
+            <Form>frmRelAbastecimentos</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
