--- a/src/FortesAbastecimento.dproj
+++ b/src/FortesAbastecimento.dproj
@@ -178,6 +178,10 @@
             <Form>frmRelAbastecimentos</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="view\uView.ContextoAbastecimento.pas">
+            <Form>frmContextoAbastecimento</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
